[gd_scene load_steps=2 format=3 uid="uid://basmceo8x7r5w"]

[ext_resource type="Script" path="res://screens/ui/menu.gd" id="1_m6db1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6db1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.352941, 0.239216, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainUIContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="TitleLabel" type="Label" parent="CenterContainer/MainUIContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Survival Game"

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/MainUIContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainUIContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="IpAddressLineEdit" type="LineEdit" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "IP ADDRESS"

[node name="ExitButton" type="Button" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="HighscoreLabel" type="Label" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Highscore: 0"

[node name="CreditLabel" type="Label" parent="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Made by Sander"

[connection signal="pressed" from="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainUIContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
